--- a/_config.yml
+++ b/_config.yml
@@ -18,14 +18,14 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: liuyun的博客
+title: "liuyun 的博客"
 email: yliu_liuyun@sina.com
 description: >- # this means to ignore newlines until "baseurl:"
   写一些个人的积累
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: no-twitter
-github_username:  mzgmzg
+github_username: mzgmzg
 
 # Build settings
 theme: minima
